<resources>
    <string name="app_name">LamarUIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lamaruin">LamarUIN</string>
    <string name="login_recruiter">Login as Recruiter</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_student">Login as Student</string>
    <string name="input_job">Input Job</string>
    <string-array name="posisi_list">
        <item>Marketing</item>
        <item>IT</item>
        <item>Manajemen</item>
    </string-array>
    <string name="selected_item">Selected item:</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="activelisting">Active Listing</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listJob">Home</string>
    <string name="applied">Applied Job</string>
    <string name="profil">Profil</string>
    <string name="recommend">Recommended For You</string>
    <string name="other_jobs">Other Jobs</string>
    <string name="kualifikasi">Kualifikasi</string>
    <string name="tab_detail_1">Job Description</string>
    <string name="tab_detail_2">Company Profile</string>
    <string name="contoh_kualifikasi">- Laki - laki \n- Usia max 35th \n- Good Attitude \n- Good Comunication \n- Tebiasa dengan target \n- Pendidikan min s1 segala jurusan \n- Berpengalaman di bidang yang sama min 1 tahun \n- Siap bekerja didalam tekanan \n- Bersedia ditempatkan di Bali</string>
    <string name="deskripsi_pekerjaan">Deskripsi Pekerjaan</string>
    <string name="contoh_deskripsi_job">- Membuat report pengerjaan dan penggunaan material lengkap dan benar \n- Melakukan monitoring project berjalan sesuai dengan permintaan dan tepat waktu \n- Mengontrol persiapan dokumen dari preparation sampai handover ke pihak construction dan kontraktor \n- Melakukan koordinasi untuk pengurusan permit ke all PU Bali \n- Melakukan monitoring progress dan melakukan serah terima ke bagian operation</string>
    <string name="contoh_company_profile">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Sit amet massa vitae tortor condimentum lacinia quis. Ridiculus mus mauris vitae ultricies leo integer malesuada. Aliquam etiam erat velit scelerisque in dictum non consectetur. Amet facilisis magna etiam tempor orci eu lobortis elementum. Purus faucibus ornare suspendisse sed nisi lacus sed viverra tellus. Augue ut lectus arcu bibendum at varius. Aliquam ut porttitor leo a diam.  Purus faucibus ornare suspendisse sed. Libero volutpat sed cras ornare arcu dui vivamus. Massa massa ultricies mi quis hendrerit dolor. Quisque id diam vel quam elementum pulvinar etiam non. Mollis nunc sed id semper risus in. Egestas dui id ornare arcu odio ut sem. Mollis nunc sed id semper risus. Ligula ullamcorper malesuada proin libero nunc consequat interdum. Morbi tincidunt ornare massa eget egestas purus viverra accumsan in. Scelerisque varius morbi enim nunc faucibus. Urna id volutpat lacus laoreet non curabitur gravida arcu. A arcu cursus vitae congue mauris rhoncus aenean vel. Sed nisi lacus sed viverra tellus in hac habitasse platea. Pellentesque habitant morbi tristique senectus et netus. Dis parturient montes nascetur ridiculus mus mauris. Posuere lorem ipsum dolor sit amet. Ut consequat semper viverra nam libero justo laoreet. Orci sagittis eu volutpat odio facilisis mauris sit amet massa. Pellentesque nec nam aliquam sem.</string>
    <string name="contoh_company_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Sit amet massa vitae tortor condimentum lacinia quis. Ridiculus mus mauris vitae ultricies leo integer malesuada. Aliquam etiam erat velit scelerisque in dictum non consectetur. Amet facilisis magna etiam tempor orci eu lobortis elementum. Purus faucibus ornare suspendisse sed nisi lacus sed viverra tellus. Augue ut lectus arcu bibendum at varius. Aliquam ut porttitor leo a diam.</string>
    <string name="change"><u>Change</u></string>
    <string name="alert_apply_title">Lamar Pekerjaan</string>
    <string name="are_you_sure_apply">Apa kamu yakin mau melamar sekarang?</string>
    <string name="alert_logout_title">Logout</string>
    <string name="are_you_sure_logout">Apa anda yakin ingin logout?</string>
    <string name="id_account">id_account</string>
    <string name="alert_delete_job">Hapus Lowongan</string>
    <string name="are_you_sure_delete_job">Apa anda yakin ingin menghapus lowongan?</string>
</resources>